# filemanager-simple

./: .gitignore  CLAUDE.md  README.md  config.yaml  organize.sh  pyproject.toml  pytest.ini  test_complete_verification.py  test_debug.py  test_directory_listing.py  test_screenshot.py  test_viewer.py  test_viewer_move.py  test_viewer_with_server.py  viewer.html
.claude/commands/: organize.md  view.md
FileQueueViewer/: README.md  build.sh  setup_project.sh
FileQueueViewer.app/Contents/: Info.plist
FileQueueViewer.app/Contents/MacOS/: FileQueueViewer
FileQueueViewer/FileQueueViewer/: ContentView.swift  FileQueueViewerApp.swift  Info.plist
FileQueueViewer/FileQueueViewer.xcodeproj/: project.pbxproj
FileQueueViewer/FileQueueViewerTests/: FileEntryTests.swift  FileOperationsTests.swift  QueueManagerTests.swift
docs/: examples.md  filing-structure.md  naming-conventions.md
logs/: execution_log.md  organize_log.md
scripts/: analyze_content.py  analyze_content.sh  auto_execute.sh  calculate_checksum.sh  create_app_icon.py  execute.sh  find_duplicates.sh  rename_insurance_files.py  stop_viewer_server.sh  validate_destination.sh  validate_suggestion.sh  view_queue.sh  viewer_server.py
state/: README.md  file_queue.json  history.json  move_history.json  skip_history.json
tests/: __init__.py  conftest.py  test_delete_functionality.py  test_organize.sh
tests/e2e/: __init__.py  test_bulk_operations.py  test_modal.py  test_move_operation.py  test_queue_display.py  test_skip_operation.py
tests/fixtures/: queue_data.py
tests/utils/: page_objects.py
(+11 files in other folders)
